--- a/draft.tex
+++ b/draft.tex
@@ -42,6 +42,7 @@
 \newcommand{\email}[1]{\href{mailto:#1}{#1}}
 \newcommand{\denselist}{\itemsep -2pt\topsep-6pt\partopsep-6pt}
 \newcommand{\commentOC}[1]{\textcolor{blue}{\small$\big[$OC: #1$\big]$}}
+\newcommand{\commentBN}[1]{\textcolor{red}{\small$\big[$BN: #1$\big]$}}
 
 \newcommand{\pref}{\succ}%real, connected pref, strict
 \newcommand{\prefeq}{\succeq}%real, connected pref, strict
@@ -250,7 +251,7 @@ By picking as consensus choice
  an alternative associated with minimax regret, we can provide a recommendation that gives worst-case guarantees, giving some robustness in face of uncertainty (due to both not knowing the agents' preferences and the weights used in the aggregation). 
 In cases of ties in minimax regret, we can either decide to return all minimax alternatives $A^*_{\pprofile, W}$ as winners or to pick just one of them using some tie-breaking strategy.
 
-Notice \commentOC{?} that if $\MMR(\pprofile, W)\!=\!0$, then $x^{*}_{\pprofile,W}$ is a necessary co-winner; this means that for any valid completion of the profile and any feasible $w \!\in\! W$, $x^{*}_{\pprofile,W}$ obtains a highest score.
+Observe that if $\MMR(\pprofile, W)\!=\!0$, then $x^{*}_{\pprofile,W}$ is a necessary co-winner; this means that for any valid completion of the profile and any feasible $w \!\in\! W$, $x^{*}_{\pprofile,W}$ obtains a highest score.
 
 We note that our notion of regret gives some cardinal meaning to the scores: instead of just being used to select winners under the corresponding PSR, their differences are considered as representing the regret of the chair.
 
@@ -264,7 +265,7 @@ Scoring rules are additively decomposable.
 %A scoring rule associates each alternative to a score that is given by the sum of points obtained for each agent.
 Recall that when computing $s(x; \profile, \w)$, $w_{v_j(x)}$ is the number of points that $x$ obtains in the ranking $v_j$ (see Equation \ref{eq:srule}).
 By exploiting the decomposition of the score in terms of votes, we write the actual regret of choosing $x$ instead of $y$ as
-\commentOC{Recall that, in the computation of $s(x; \profile, \w)$, $w_{v_j(x)}$ represents the score that $x$ obtains in the ranking $v_j$ (see Equation \ref{eq:srule}).
+\commentBN{Recall that, in the computation of $s(x; \profile, \w)$, $w_{v_j(x)}$ represents the score that $x$ obtains in the ranking $v_j$ (see Equation \ref{eq:srule}).
 Since scoring rules are additively decomposable, we can decompose the score in terms of votes. Thus, we can write the actual regret of choosing $x$ instead of $y$ as}
 \[
 s(y; \profile,\w) - s(x; \profile, \w) = \sum_{j=1}^n w_{v_j(y)} - w_{v_j(x)},
@@ -299,7 +300,7 @@ We just sketched a proof of the following claim, and leave the rest of the proof
 There exists a completion $\hat{\profile} \in C(\pprofile)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} [ s(y; \hat{\profile}, \w) - s(x; \hat{\profile}, \w) ]$ and such that the linear order $\hat{v}_{j}$ of each agent $j$ satisfies (\ref{eq:compl}).
 \end{claim}
 It follows that $\hat{v}_{j}(x)$, the rank of $x$ in the PMR-maximizing linear order of agent $j$, 
-is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\pprefeq_j}(x)}$, where ${\pprefeq_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\pprefeq_j$ (thus including $x$ itself) \commentOC{Is it not better write $\hat{v}_{j}(x) = 1+\card{A}-\card{{\ppref_j}(x)}$? I guess it's for coherence for the $\beta$ expression but it doesn't make much sense pointing out we're removing and adding x.}, and the rank of $y$ is $\hat{v}_{j}(y)=1+\card{{\pprefinv_j}(y)}+\beta$, where $\beta = \card{{\pinc_j}(x)}$ if $(x \pprefeq_j y)$ and $\beta = 0$ otherwise and with ${\pinc_j}(x)$ designating the alternatives incomparable with $x$ in $\pprefeq_j$ \commentOC{Still not good. In the set of alternatives incomparable with $x$ there could be alternatives strictly better than $y$. It is exactly the problem we had before. Instead, $\beta$ represents the number of alternatives incomparable with $x$ that are no better than $y$: $\beta = \card{A \setminus ({\pprefeq_j}(x) \cup {\pprefinv_j}(y))}$ }.
+is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\pprefeq_j}(x)}$, where ${\pprefeq_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\pprefeq_j$ (thus including $x$ itself) \commentBN{Is it not better write $\hat{v}_{j}(x) = 1+\card{A}-\card{{\ppref_j}(x)}$? I guess it's for coherence for the $\beta$ expression but it doesn't make much sense pointing out we're removing and adding x.}, and the rank of $y$ is $\hat{v}_{j}(y)=1+\card{{\pprefinv_j}(y)}+\beta$, where $\beta = \card{{\pinc_j}(x)}$ if $(x \pprefeq_j y)$ and $\beta = 0$ otherwise and with ${\pinc_j}(x)$ designating the alternatives incomparable with $x$ in $\pprefeq_j$ \commentBN{Still not good. In the set of alternatives incomparable with $x$ there could be alternatives strictly better than $y$. It is exactly the problem we had before. Instead, $\beta$ represents the number of alternatives incomparable with $x$ that are no better than $y$: $\beta = \card{A \setminus ({\pprefeq_j}(x) \cup {\pprefinv_j}(y))}$ }.
 
 %Proof: Define $\pref$ as just $\ppref_j$ with the arcs added to minimally satisfy the above. Thus, add the following arcs: when $x ? a$, add $a > x$. When $a ? y ∧ x \ppref_j y ∧ ¬(x \ppref_j a)$, add $a \pref y$. When $a ? y ∧ [¬(x \ppref_j y) ∨ (x \ppref_j a)]$, add $y \pref a$. Observe that $\ppref_j \subseteq \pref$. We have to show that it is acyclic. (Then we take its transitive closure to make it a partial order, and it’s done.) Note that if there is a cycle in $\pref$, it’s because of some new arcs, as $\ppref_j$ is acyclic. Thus, the cycle must go through one of these new arcs. …
 
@@ -310,7 +311,7 @@ The $\PMR$ can be written as:
 & = \max_{w \in W} \sum_{j=1}^n w_{\hat{v}_j(y)} - w_{\hat{v}_j(x)} = \\ 
 & = \max_{w \in W} \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_i. 
 \end{align}
-where the $\hat{\alpha}_{r}^{y}$ (resp. $\hat{\alpha}_{r}^{x}$)  is the number of times $y$ (resp. $x$) is at rank $r$ in the rankings of the completed \commentOC{?} profile $\hat{\profile}$.
+where the $\hat{\alpha}_{r}^{y}$ (resp. $\hat{\alpha}_{r}^{x}$)  is the number of times $y$ (resp. $x$) is at rank $r$ in the rankings of the completed \commentBN{?} profile $\hat{\profile}$.
 \end{claim}
 The last claim shows that PMR is linear in the weights.
 Recall that the preferences of the chair are encoded with linear constraints $\Co_{W}$.
@@ -326,7 +327,7 @@ Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variabl
 
 The max regret $\MR(x; \pprofile, W)$ is determined by considering the pairwise regret of $x$ with all other alternatives in $A$.
 Optimal alternatives w.r.t. minimax regret are the ones with least max regret. 
-Notice \commentOC{?} that, whenever the PMR of an alternative $x$ (against some other alternative) exceeds the best MR value found so far, we don't need to further evaluate $x$, as it can't be optimal. \commentOC{?} 
+Observe that, whenever the PMR of an alternative $x$ (against some other alternative) exceeds the best MR value found so far, we don't need to further evaluate $x$, as it can't be optimal. \commentBN{?} 
 This idea can be exploited further by adopting a minimax-search tree \citep{Braziunas2011}.
 
 \section{Interactive Elicitation} 
@@ -373,7 +374,7 @@ First build a temporary profile $P$ of $p+q$ agents with $a$ and $b$ ranked as j
 
 Pick any alternative $c$ that is not $a$ or $b$. 
 %Let $c_t$ denote the number of times $c$ reaches rank $t$ or better in $P$. Note that $c_m = p+q$ and $c_t ≤ p + q, 1 ≤ t ≤ m$. Define $a_t$ similarly, for the alternative $a$. By construction, $a_r = q$, $a_{r+2} = q+p = a_m$. 
-Define $c'_t$ as the number of times $c$ gets rank $t$ or better in $P'$, and define $a'_t$ similarly. Now $a'_1 ≥ \delta, a'_t ≥ 2\delta \text{ for } 2 ≤ t < m, a'_{r+2} = q+p+2\delta = a'_m$. To obtain upper bounds for $c'_t$, assume $c$ is ranked first by the $p+q$ agents voting in profile $P$. By our construction, the  $2 \delta$ new agents of $P'$ give to $c$ the ranks $(3, m)$, or $(4, m-1)$, … Observe that the score of $c$ is maximal for attribution $(3, m)$, by convexity of the weights. Therefore, in the best case for $c$, $c'_1 ≤ p + q, c'_2 ≤ p+q, c'_t ≤ p+q+\delta \text{ for } 3 ≤ t < m, c'_m ≤ p+q+2\delta$. Observe that $a'_t ≥ c'_t, 1 ≤ t ≤ m$ (with strict inequality for $t=2$). Because weights are non increasing, this guarantees, with $\delta = p + q$, that the score of $a$ is not lower than the one of $c$ (it is even strictly higher, thanks to the strict inequality). \commentOC{Here using the strict inequality assumption.}
+Define $c'_t$ as the number of times $c$ gets rank $t$ or better in $P'$, and define $a'_t$ similarly. Now $a'_1 ≥ \delta, a'_t ≥ 2\delta \text{ for } 2 ≤ t < m, a'_{r+2} = q+p+2\delta = a'_m$. To obtain upper bounds for $c'_t$, assume $c$ is ranked first by the $p+q$ agents voting in profile $P$. By our construction, the  $2 \delta$ new agents of $P'$ give to $c$ the ranks $(3, m)$, or $(4, m-1)$, … Observe that the score of $c$ is maximal for attribution $(3, m)$, by convexity of the weights. Therefore, in the best case for $c$, $c'_1 ≤ p + q, c'_2 ≤ p+q, c'_t ≤ p+q+\delta \text{ for } 3 ≤ t < m, c'_m ≤ p+q+2\delta$. Observe that $a'_t ≥ c'_t, 1 ≤ t ≤ m$ (with strict inequality for $t=2$). Because weights are non increasing, this guarantees, with $\delta = p + q$, that the score of $a$ is not lower than the one of $c$ (it is even strictly higher, thanks to the strict inequality). \commentBN{Here using the strict inequality assumption.}
 
 This concludes the proof of the following claim. 
 \begin{claim}
@@ -407,7 +408,7 @@ Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agents. We sel
 
 The \strat{Pessimistic} strategy selects the question that leads to minimal regret in the worst case, considering both possible answers to the question. Assume that a question leads to the possible new knowledge states $(\pprofile_1, W_1)$ and $(\pprofile_2, W_2)$, depending on the answer. Then the badness of the question in the worst case is:
 \[\max_{i=1,2} \MMR(\pprofile_i,W_i) \]
-This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes the measure. Note that other aggregators than $\max$ can be used as well. The \strat{Pessimistic} strategy considers as possible questions the ones defined by the \strat{Random} strategy (with the difference that a threshold is used: if for some rank $r$ the interval of possible values for $\lambda$ is not larger than $0.1$, the question is not considered). It uses a variant of the $\max$ as an aggregator: if the maximal $\MMR$ of two questions are equal, it prefers the question that has the lowest $\MMR$ \commentOC{if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest of this value.}. We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it gives us an estimate of an upper bound to the possible quality of a strategy.
+This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes the measure. Note that other aggregators than $\max$ can be used as well. The \strat{Pessimistic} strategy considers as possible questions the ones defined by the \strat{Random} strategy (with the difference that a threshold is used: if for some rank $r$ the interval of possible values for $\lambda$ is not larger than $0.1$, the question is not considered). It uses a variant of the $\max$ as an aggregator: if the maximal $\MMR$ of two questions are equal, it prefers the question that has the lowest $\MMR$ \commentBN{if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest of this value.}. We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it gives us an estimate of an upper bound to the possible quality of a strategy.
 
 The \strat{Two phase} strategy asks a predefined, non adaptive sequence of $m-2$ questions in order to gather informations about the weights $\w$ of the scoring rule, using one question per rank (except the extreme ones) as defined in the other strategies, thus, each cutting the initial interval of possibilities into two equal parts. Then it only asks questions about the agents, using questions as defined in the \strat{Pessimistic} strategy.
 %TODO Then use minimax regret as in Lu and Boutilier. check what’s this.
@@ -504,7 +505,7 @@ Finally, an important direction of extension aims at studying how to elicit pref
 %{\small
 \bibliography{biblio}
 %\bibliographystyle{named}
-\bibliographystyle{plain} 
+\bibliographystyle{abbrvnat} 
 %}
 \end{document}
 
