Make the complex equation fit the paper

--- a/draft.tex
+++ b/draft.tex
@@ -288,7 +288,7 @@ To summarize:
 \label{eq:compl}
 \begin{split}
 a \pref_j x &⇔ ¬(x \pprefeq_j a)\\
-y \prefeq_j a &⇔ ¬(a \ppref_j y) ∧ (¬(x \pprefeq_j y) ∨ (x \pprefeq_j a)).
+y \pref_j a &⇔ ¬(a \ppref_j y) ∧ (¬(x \pprefeq_j y) ∨ (x \ppref_j a)).
 \end{split}
 \end{align} 
 We just sketched a proof of the following claim, and leave the rest of the proof to the reader.
