--- a/draft.tex
+++ b/draft.tex
@@ -404,7 +404,7 @@ Instead, if $\tau_{1} > \tau_{2}$ we ask a question to one of the agents. We sel
 
 The \strat{Pessimistic} strategy selects the question that leads to minimal regret in the worst case, considering both possible answers to the question. Assume that a question leads to the possible new knowledge states $(\pprofile_1, W_1)$ and $(\pprofile_2, W_2)$, depending on the answer. Then the badness of the question in the worst case is:
 \[\max_{i=1,2} \MMR(\pprofile_i,W_i) \]
-This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes the measure. Note that other aggregators than $\max$ can be used as well. The \strat{Pessimistic} strategy considers as possible questions the ones defined by the \strat{Random} strategy (with the difference that a threshold is used: if for some rank $r$ the interval of possible values for $\lambda$ is not larger than $0.1$, the question is not considered). It uses a variant of the $\max$ as an aggregator: if the maximal $\MMR$ of two questions are equal, it prefers the question that has the lowest $\MMR$ \commentBN{if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest of this value.}. We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it gives us an estimate of an upper bound to the possible quality of a strategy.
+This badness measure gives a way of picking questions among a set of possible questions, by picking one that minimizes the measure. Note that other aggregators than $\max$ can be used as well. The \strat{Pessimistic} strategy considers as possible questions the ones defined by the \strat{Random} strategy (with the difference that a threshold is used: if for some rank $r$ the interval of possible values for $\lambda$ is not larger than $0.1$, the question is not considered). It uses a variant of the $\max$ as an aggregator: if the maximal $\MMR$ of two questions are equal, then it considers the other $\MMR$ values, that are the one associated to the opposite answer, preferring the question with the lowest of this value. We expect this strategy to perform very well, but only for very small problem instances: its complexity is in $O(n^2 m^5)$, because we consider $O(m^2)$ questions for each agent and need for each question to compute $\MMR$ twice, whose complexity is $O(nm^3)$. For small dimensions, it gives us an estimate of an upper bound to the possible quality of a strategy.
 
 The \strat{Two phase} strategy asks a predefined, non adaptive sequence of $m-2$ questions in order to gather informations about the weights $\w$ of the scoring rule, using one question per rank (except the extreme ones) as defined in the other strategies, thus, each cutting the initial interval of possibilities into two equal parts. Then it only asks questions about the agents, using questions as defined in the \strat{Pessimistic} strategy.
 %TODO Then use minimax regret as in Lu and Boutilier. check what’s this.
