--- a/draft.tex
+++ b/draft.tex
@@ -503,11 +503,22 @@ Finally, an important direction of extension aims at studying how to elicit pref
 %\bibliographystyle{named}
 \bibliographystyle{abbrvnat} 
 %}
-\end{document}
+%\end{document}
 
 \appendix
-\section{Minimax Computation under Convex Assumption} 
+\section{Bounding differences of weights}
+We want to check whether we can round PMR values to (for example) $10^{-4}$. Thus, we want to bound the difference of scores (unless it is zero).
 
+Consider $s(a) = w_2 + w_4$, $s(b) = w_3 + w_3$, $w_1 = 1, w_2 = w_3 + \epsilon, w_4 = 0$, with $w_3$ and $\epsilon$ two small positive numbers. Then convexity is satisfied and $s(a) - s(b) = \epsilon$.
+
+Note that in this example, $w_3 ≤ \epsilon$, thus the difference of scores is indeed at least the smallest weight!
+
+Consider $w_1 = 1, w_2 = 0.45, w_3 = 0.1, w_4 = 0$, $s(a) - s(b) = (w_2 - w_3) -3 (w_3 - w_4) = 0.35 - 0.30 = 0.05 < w_3$. 
+
+Problem: we can make the difference of scores very small, even with $n=2$ voters and $m=3$ alternatives and while satisfying convexity. Consider $w_1 = 1, w_2 = \frac{1-\epsilon}{n}, w_3 = 0$, $s(a) - s(b) = (w_1 - w_2) - (n-1) (w_2 - w_3) = w_1 - n w_2 = \epsilon$. Choose $\epsilon < \frac{1}{n+1}$ so that $w_2 > \epsilon$ and $n ≥ 2$ to satisfy convexity. For example, $\epsilon = 1/1000, n = 2, w_2 = 999/2000$.
+\end{document}
+
+\section{Minimax Computation under Convex Assumption} 
 Refer to \citep{Lu2011}
 The goal is to choose as a winner the alternative $x^*$ whose worst case loss is minimal under all possible realizations of the full profile and all possible choices of weights. 
 Assume hereinafter the selected weights sequence $\w \in W$ to be convex. 
