--- a/draft.tex
+++ b/draft.tex
@@ -12,7 +12,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage{newunicodechar}
 \usepackage{textcomp}
-\newunicodechar{⇒}{\implies}
+%\newunicodechar{⇒}{\implies}
+\newunicodechar{⇒}{\Rightarrow}
 \newunicodechar{≠}{\ensuremath{\neq}}
 \newunicodechar{≤}{\leq}
 \newunicodechar{≥}{\geq}
@@ -273,52 +274,52 @@ and we can rewrite $\PMR$ as follows:
 \end{align*}
 Note that in general the inner max depends on the weights chosen by the outer min.
 
+We are interested in computing $\PMR(x, y; \pprofile, W)$. This represents the “worst” difference of score, thus the difference of score between $y$ and $x$ under the worst case preferences compatible with $\pprofile$ and $W$, where the worst case is the one that maximizes this difference of score.
 We consider now a procedure for completing a partial profile that was first proposed by \citet{Lu2011} when considering minimax regret with a fixed weight vector.
 As we will show, this procedure can also be used when the weight vector is not completely known.
 
-We are interested in computing $\PMR(x, y; \pprofile, W)$. This represents the “worst” difference of score, thus the difference of score between $y$ and $x$ under the worst case preferences compatible with $\pprofile$ and $W$, where the worst case is the one that maximizes this difference of score.
-Consider our knowledge $\ppref_j$ about the preference of the agent $j$. 
-The adversary's goal is to make the score of $y$ as high as possible and the score of $x$ as low as possible. 
-To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worse than $x$ (those $a$ such that $x \pprefeq_j a$); and similarly, put below $y$ all the alternatives he can, thus, put above $y$ only those $a$ such that $a \ppref_j y$. 
-Sometimes these two objectives conflict: when an alternative should go above $x$ according to the first objective and below $y$ according to the second one (because $¬(x \pprefeq_j a) ∧ ¬(a \ppref_j y)$), and $x$ is known to be better than $y$ (thus $x \pprefeq_j y$). 
-In this case, the first objective should take priority, and $a$ should be put above $x$, which will move both $x$ and $y$ one rank lower than if $a$ had been put below $y$. 
-This maximizes the adversary’s interests: because the weight vector is convex, the difference of scores will be lower when both alternatives are ranked lower (Equation \ref{eq:convexity}), and that difference of scores is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
-To summarize:
-\begin{align} 
-\label{eq:compl}
-\begin{split}
-a \pref_j x &⇔ ¬(x \pprefeq_j a)\\
-y \pref_j a &⇔ ¬(a \ppref_j y) ∧ (¬(x \pprefeq_j y) ∨ (x \pprefeq_j a)).
-\end{split}
-\end{align} 
-\commentBN{I think it would be more intuitive writing: \\ $ y \pref_j a ⇔ ¬(a \ppref_j y) ∧ ¬((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a))$}
-We just sketched a proof of the following claim, and leave the rest of the proof to the reader.
 \begin{claim}
-There exists a completion $\hat{\profile} \in C(\pprofile)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} [ s(y; \hat{\profile}, \w) - s(x; \hat{\profile}, \w) ]$ and such that the linear order $\hat{v}_{j}$ of each agent $j$ satisfies (\ref{eq:compl}).
-\end{claim}
-It follows that $\hat{v}_{j}(x)$, the rank of $x$ in the PMR-maximizing linear order of agent $j$, 
-is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\pprefeq_j}(x)}$, where ${\pprefeq_j}(x)$ designates the set of alternatives that are less good than $x$ according to $\pprefeq_j$ (thus including $x$ itself), and the rank of $y$ is $\hat{v}_{j}(y)=1+\card{{\pprefinv_j}(y)}+\card{\beta}$, where $\card{\beta} = \card{A \setminus ({\pprefeq_j}(x) \cup {\pprefinv_j}(y))}$ if $(x \pprefeq_j y)$ and $\card{\beta} = 0$ otherwise.
-In the case $(x \pprefeq_j y)$, intuitively $\beta$ represents the number of alternatives incomparable with $x$ that are no better than $y$. Let's reason about what alternatives must be placed above $y$ by negating the second equation of \ref{eq:compl}:
-\begin{align}
-\label{eq:betaproof} 
-\begin{split}
-a \prefeq_j y &⇔ (a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a))\\
-a \pref_j y &⇔ (a \neq_j y) ∧ [(a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a))]
-\end{split}
+There exists a completion $\hat{\profile} \in C(\pprofile)$ such that $\PMR(x,y; \pprofile, W) = \max_{\w \in W} [ s(y; \hat{\profile}, \w) - s(x; \hat{\profile}, \w) ]$ and such that the linear order $\hat{v}_{j}$ of each agent $j$ satisfies:
+\begin{align} 
+\label{eq:complx}
+a \pref_j x &⇔ ¬(x \pprefeq_j a)\\
+\label{eq:comply}
+y \pref_j a &⇔ ¬(a \pprefeq_j y) ∧ ¬((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a)).
 \end{align} 
-But the term in the square brackets implies $(a \neq_j y)$, indeed:
-\[(a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a)) \Rightarrow (a \neq_j y)\]
-$(a \ppref_j y) \Rightarrow (a \neq_j y)$ is always true, and we can rewrite $¬(x \pprefeq_j a)$ as $(a \ppref_j x) ∨ (a \pinc_j x)$, where $\pinc_j$ designates incomparability. Thus:
-\begin{gather*} 
-(x \pprefeq_j y) ∧ ¬(x \pprefeq_j a) \Rightarrow (a \neq_j y) \\
-(x \pprefeq_j y) ∧ ((a \ppref_j x) ∨ (a \pinc_j x)) \Rightarrow (a \neq_j y) \\
-((x \pprefeq_j y) ∧ (a \ppref_j x)) ∨ ((x \pprefeq_j y) ∧ (a \pinc_j x)) \Rightarrow (a \neq_j y).
-\end{gather*}
-So we can go back to \ref{eq:betaproof} dropping the $(a \neq_j y)$ term:
-\[a \pref_j y ⇔ (a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a) ∧ ¬(a \ppref_j y))\]
-In case $(x \pprefeq_j y)$, we say an alternative $a \in \beta$ iff $¬((x \pprefeq_j a) ∨ (a \ppref_j y))$. Thus defining $\beta=A \setminus ({\pprefeq_j}(x) \cup {\pprefinv_j}(y))$.
+\end{claim}
+\begin{proof}[Sketch of proof]
+Consider our knowledge $\pprefeq_j$ about the preference of the agent $j$. 
+The adversary's goal is to make the score of $y$ as high as possible and the score of $x$ as low as possible. 
+To do this, he should complete $\ppref_j$ to $\pref_j$ by putting above $x$ as many alternatives as he can, that is, all the alternatives except those that are known to be worse than $x$ (those $a$ such that $x \pprefeq_j a$); and similarly, he should put below $y$ all the alternatives he can. Two conditions must be excluded for $a$ to go below $y$. The alternatives such that $a \pprefeq_j y$ can’t be put below $y$.
+Furthermore, the first objective must take priority over the second one: when an alternative should go above $x$ according to the first objective (because $¬(x \pprefeq_j a)$), and $x$ is known to be better than $y$ (thus $x \pprefeq_j y$), then $a$ should be put above $x$ (irrespective of whether $a \pprefeq_j y$), which will move both $x$ and $y$ one rank lower than if $a$ had been put below $y$. 
+This maximizes the adversary’s interests: because the weight vector is convex, the difference of scores will be lower when both alternatives are ranked lower (Equation \ref{eq:convexity}), and that difference of scores is in favor of $x$ when $x \ppref_j y$, thus to be minimized from the point of view of the adversary.
+\end{proof}
 
-%Proof: Define $\pref$ as just $\ppref_j$ with the arcs added to minimally satisfy the above. Thus, add the following arcs: when $x ? a$, add $a > x$. When $a ? y ∧ x \ppref_j y ∧ ¬(x \ppref_j a)$, add $a \pref y$. When $a ? y ∧ [¬(x \ppref_j y) ∨ (x \ppref_j a)]$, add $y \pref a$. Observe that $\ppref_j \subseteq \pref$. We have to show that it is acyclic. (Then we take its transitive closure to make it a partial order, and it’s done.) Note that if there is a cycle in $\pref$, it’s because of some new arcs, as $\ppref_j$ is acyclic. Thus, the cycle must go through one of these new arcs. …
+Let ${\pprefeq_j}(x)$ designate the set of alternatives that are known to be considered by $j$ as less good than or equal to $x$, and ${\pprefinv_j}(y)$ be the set of alternatives known to be considered by $j$ as strictly better than $y$.
+\begin{claim}
+	The rank of $x$ in the PMR-maximizing linear orders of agent $j$ is $\hat{v}_{j}(x) = 1+\card{A}-\card{{\pprefeq_j}(x)}$, and the rank of $y$ is $\hat{v}_{j}(y)=1+\card{{\pprefinv_j}(y)}+\card{\beta}$, where $\card{\beta} = \card{A \setminus ({\pprefeq_j}(x) \cup {\pprefinv_j}(y))}$ if $(x \pprefeq_j y)$ and $\card{\beta} = 0$ otherwise.
+\end{claim}
+\begin{proof}
+The rank of $x$ is directly obtained from \cref{eq:complx}. The rank of $y$ is obtained by complementing \cref{eq:comply}, obtaining $a \prefeq_j y ⇔ (a \pprefeq_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a))$, and, observing that $a \pref_j y ⇔ a ≠ y ∧ a \prefeq_j y$, obtaining that $a \pref_j y$ if and only if
+\begin{equation}
+\label{eq:betteryinter}
+(a \neq y) ∧ [(a \pprefeq_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a))],
+\end{equation} 
+or equivalently, if and only if
+\begin{equation}
+\label{eq:bettery}
+%a \pref_j y ⇔ 
+(a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a)).
+\end{equation} 
+Indeed, \eqref{eq:betteryinter} $⇒$ \eqref{eq:bettery}, and \eqref{eq:bettery} $⇒$ \eqref{eq:betteryinter} because $(x \pprefeq_j y) ∧ ¬(x \pprefeq_j a) ⇒ a ≠ y$ (as when $a = y$, $(x \pprefeq_j y)$ and $¬(x \pprefeq_j a)$ are opposite claims). Suffices now to rewrite \cref{eq:bettery} to let the two disjuncts designate disjoint sets:
+\begin{equation}
+\label{eq:betteryfinal}
+a \pref_j y ⇔ 
+(a \ppref_j y) ∨ ((x \pprefeq_j y) ∧ ¬(x \pprefeq_j a) ∧ ¬(a \ppref_j y)).
+\end{equation} 
+\end{proof}
+
+The claim can also be understood by observing that in the case $(x \pprefeq_j y)$, $\beta$ is the number of alternatives incomparable with both $x$ and $y$.
 
 \begin{claim}
 The $\PMR$ can be written as:
@@ -334,8 +335,8 @@ Recall that the preferences of the chair are encoded with linear constraints $\C
 The pairwise max regret $\PMR(x,y; \pprofile,W)$ can be obtained as the solution of the following linear program defined on the variables $w_1, …, w_m$, which represent the weights attached to different positions. 
 \begin{align*}
 \max_{\w} & \sum_{r=1}^m (\hat{\alpha}_{r}^{y} - \hat{\alpha}_{r}^{x}) w_{r}\\
-\text{ s.t. } & \text{Equation } (\ref{eq:monotone})\\
-& \text{Equation } (\ref{eq:convexity})\\
+\text{ s.t. } & \text{\cref{eq:monotone}}\\
+& \text{\cref{eq:convexity}}\\
 & \Co_W
 \end{align*}
 Note that given our choice $w_{1}=1$ and $w_{m}=0$, there are only $m-2$ variables 
@@ -375,10 +376,12 @@ for $r \in \{1,\ldots,m-2\}$, relating the difference between the importance of 
 \paragraph{Building concrete questions for the chair}
 As we assume the weights constitute the utility components of the chair, it might be reasonable to assume
 %as we do here, 
-that the chair is able to answer such abstract questions in our setting. However, it is important to make sure that a question can also, in principle, be asked in a more concrete way, in terms of winners of example profiles. This permits to test whether the chair understands the question as we do and to relate the preference of the chair to her choice behavior in the economic sense. Furthermore this will be necessary for an ordinal extension of our work where the scores would not be considered as cardinal utilities.
+that the chair is able to answer such abstract questions in our setting. However, it is important to make sure that a question can also, in principle, be asked in a more concrete way, in terms of winners of example profiles. This permits to test how the chair understands the question and to relate the preference of the chair to her choice behavior in the economic sense. Furthermore this will be necessary for an ordinal extension of our work where the scores would not be considered as cardinal utilities.
 Thus, our task is to build a profile, given $\lambda$ and $r ≤ m-2$, in such a way that the set of (tied) winners picked by the chair reveals whether $w_{r} - w_{r+1} \geq \lambda (w_{r+1} - w_{r+2})$.
-We assume that $\lambda$ is rational, and define $\lambda = p/q$.
-
+\begin{claim}
+	Given a rational $\lambda = p/q$ and a rank $r$ between $1$ and $m - 2$, the profile named $P'$ in the ensuing description is such that, for any weight vector $\w \in \W$, $a \in f(P')$ iff $w_{r} - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$ and $b \in f(P')$ iff $w_{r} - w_{r+1} ≤ \lambda (w_{r+1} - w_{r+2})$, where $f$ is the PSR parameterized with $\w$.
+\end{claim}
+\begin{proof}
 Observe that the question may be defined equivalently as $q \cdot w_{r} + p \cdot w_{r+2} ≥ (p + q) \cdot w_{r+1}$, where $p, q$ are natural numbers. 
 As a first attempt to make this question concrete, let us define a profile $P$ containing $p+q$ agents. 
 Define an alternative $a$ that receives $q$ times the rank $r$ and $p$ times the rank $r+2$ and an alternative $b$ that receives $p+q$ times the rank $r+1$. 
@@ -393,11 +396,8 @@ First build a temporary profile $P$ of $p+q$ agents with $a$ and $b$ ranked as j
 Pick any alternative $c$ that is not $a$ or $b$. 
 %Let $c_t$ denote the number of times $c$ reaches rank $t$ or better in $P$. Note that $c_m = p+q$ and $c_t ≤ p + q, 1 ≤ t ≤ m$. Define $a_t$ similarly, for the alternative $a$. By construction, $a_r = q$, $a_{r+2} = q+p = a_m$. 
 Define $c'_t$ as the number of times $c$ gets rank $t$ or better in $P'$, and define $a'_t$ similarly. Now $a'_1 ≥ \delta, a'_t ≥ 2\delta \text{ for } 2 ≤ t < m, a'_{r+2} = q+p+2\delta = a'_m$. To obtain upper bounds for $c'_t$, assume $c$ is ranked first by the $p+q$ agents voting in profile $P$. By our construction, the  $2 \delta$ new agents of $P'$ give to $c$ the ranks $(3, m)$, or $(4, m-1)$, … Observe that the score of $c$ is maximal for attribution $(3, m)$, by convexity of the weights. Therefore, in the best case for $c$, $c'_1 ≤ p + q, c'_2 ≤ p+q, c'_t ≤ p+q+\delta \text{ for } 3 ≤ t < m, c'_m ≤ p+q+2\delta$. Observe that $a'_t ≥ c'_t, 1 ≤ t ≤ m$ (with strict inequality for $t=2$). Because weights are non increasing, this guarantees, with $\delta = p + q$, that the score of $a$ is not lower than the one of $c$.
+\end{proof}
 
-This concludes the proof of the following claim. 
-\begin{claim}
-	Given a rational $\lambda$ and a rank $r$ between $1$ and $m - 2$, the profile named $P'$ in the foregoing description is such that, for any weight vector $\w \in \W$, $a \in f(P')$ iff $w_{r} - w_{r+1} ≥ \lambda (w_{r+1} - w_{r+2})$ and $b \in f(P')$ iff $w_{r} - w_{r+1} ≤ \lambda (w_{r+1} - w_{r+2})$, where $f$ is the PSR parameterized with $\w$.
-\end{claim}
 At this stage, we are content that a procedure exists to transform our abstract questions to questions about winners of a PSR. Further studies would investigate, for example, what is lost in terms of elicitation efficiency when we are forced to restrain to realistic concrete questions, meaning, questions involving small profiles; or investigate the relationship between our understanding of scores as (cardinal) utility and (ordinal) scores as definition of a PSR.
 
 \paragraph{Elicitation strategies}
